<resources>

    <string name="app_name">华盟教育</string>
    <string name="home">首页</string>
    <string name="type">分类</string>
    <string name="cache">缓存</string>
    <string name="me">我的华盟</string>
    <string name="start_experience">立即体验</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="exit_app">你确定要退出应用吗?</string>
    <item name="tag_first" type="id" />
    <item name="tag_second" type="id" />
    <item name="tag_third" type="id" />
    <item name="tag_four" type="id" />

    <!-- 下拉刷新 -->
    <string name="more_tip">没有更多了</string>
    <string name="load_tip">正在加载</string>

    <!-- general -->
    <string name="general_error">获取数据出现异常，请稍后再试</string>
    <string name="general_server_down">网络不给力，请求超时</string>
    <string name="general_no_internet">网络故障，请检查你的网络</string>
    <string name="general_network_error">网络异常,请检查网络设置</string>
    <string name="general_force_close">很抱歉,程序出现异常,即将退出!</string>
    <string name="general_no_gallery_app">没有找到相应的程序执行该操作</string>
    <string name="general_no_camera_app">没有程序执行拍照操作</string>
    <string name="general_download_error">很抱歉，应用没有下载成功!</string>

    <!--登录注册-->
    <string name="reg_agreement">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus sapien nunc eget odio.
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus sapien nunc eget odio.
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus sapien nunc eget odio.
    </string>
    <string name="reg_phone">请输入手机号</string>
    <string name="reg_message">请输入短信验证码</string>
    <string name="reg_get_code">获取验证码(60S)</string>
    <string name="reg_agree">我同意</string>
    <string name="reg_Agreement_name">华盟教育注册协议</string>
    <string name="reg_next">下一步</string>
    <string name="reg_username">昵称</string>
    <string name="reg_hint_sun_eight">请输入3-8位字符</string>
    <string name="reg_hint_sun_sixty">请输入6-16位字符</string>
    <string name="reg_hint_sun_sixty_again">请再次输入6-16位字符</string>
    <string name="reg_or_not">选填</string>
    <string name="reg_password">密码</string>
    <string name="reg_password_sure">确认密码</string>
    <string name="reg_referrer_phone">推荐人手机号</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="find_phone">请输入11位手机号</string>
    <string name="find_code">输入验证码</string>
    <string name="sure">确定</string>
    <string name="log_name">账号</string>
    <string name="log_remenber_password">记住密码</string>
    <string name="log_forget_password">忘记密码?</string>
    <string name="log_hint_username">请使用手机号或者昵称登录</string>
    <string name="old_password">原始密码</string>
    <string name="old_hint_password">请输入您的原始密码</string>
    <string name="new_password">新密码</string>
    <string name="new_password_sure">确认新密码</string>
    <string name="modify_username_hint">请输入您的昵称3-8位字符</string>
    <string name="modify_email">邮箱</string>

    <!--我要留学-->
    <string name="abr_survey">请填写问卷调查信息</string>
    <string name="abr_name">姓名</string>
    <string name="abr_school">毕业院校</string>
    <string name="abr_phone">手机号码</string>
    <string name="abr_email">邮箱</string>
    <string name="abr_join">您已经参加过这个问卷调查</string>

    <!--我的华盟-->
    <string name="integral_no">暂无明细</string>

    <string name="buy_video">购买的视频</string>
    <string name="publish_video">发布的视频</string>
    <string name="my_collect">我的收藏</string>
    <string name="vedio_no">暂无视频教程</string>
    <string name="collect_no">暂无收藏</string>
    <string name="log_exit">退出登录</string>
    <string name="youxiang">邮箱</string>
    <string name="binding_num">学号</string>
    <string name="binding">绑定学号</string>
    <string name="binding_suc">恭喜你，绑定成功！</string>
    <string name="binding_back">返回个人中心</string>
    <string name="binding_def">绑定失败</string>
    <string name="binding_def_yuanying">您的姓名或手机号不正确</string>
    <string name="binding_continue">继续绑定</string>
    <string name="feedback_tijiao">提交</string>
    <string name="tv_xianzhi">200字符以内</string>
    <string name="teacher_no">暂无老师</string>
    <string name="tongzhi">通知</string>
    <string name="xiaoxi">评论消息</string>
    <string name="tongzhi_num">3</string>
    <string name="no_tongzhi">暂无通知</string>
    <string name="no_xiaoxi">暂无消息</string>
    <string name="no_plan">暂无计划</string>
    <string name="plan_name">雅思考试计划</string>
    <string name="plan_time">9/8-9/12</string>
    <string name="plan_content">完成精听剑7_4_4 + 复习雅思阅读高频单词list 1_3</string>
    <string name="birthday">生日</string>
    <string name="aboutus">关于我们</string>
    <string name="contactus">联系我们</string>
    <!-- 下拉刷新 -->
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">努力加载中，请稍候</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开即刷新 </string>
    <string name="pull_to_refresh_refreshing_label">努力加载中，请稍候</string>
    <string name="refresh_bottom_text">没有更多了</string>
</resources>


