<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/titlebar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:background="@drawable/agreement_bg">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/log_img1" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#d2d2d2" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:drawableLeft="@mipmap/reg_username"
                android:layout_marginLeft="15dp"
                android:drawablePadding="10dp"
                android:textSize="15sp"
                android:textColor="#3e3e3e"
                android:text="@string/log_name" />

            <EditText
                android:id="@+id/et_log_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_marginRight="15dp"
                android:background="#00000000"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:textColorHint="#c9c9c9"
                android:textColor="@color/item_content_color"
                android:singleLine="true"
                android:inputType="text"
                android:textSize="15sp"
                android:hint="@string/log_hint_username" />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#d2d2d2" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:drawableLeft="@mipmap/reg_password_sure"
                android:layout_marginLeft="15dp"
                android:drawablePadding="10dp"
                android:textSize="15sp"
                android:textColor="#3e3e3e"
                android:text="@string/reg_password" />

            <EditText
                android:id="@+id/et_log_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_marginRight="15dp"
                android:background="#00000000"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:textColorHint="#c9c9c9"
                android:textColor="@color/item_content_color"
                android:singleLine="true"
                android:inputType="textPassword"
                android:textSize="15sp"
                android:hint="@string/reg_hint_sun_sixty" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <CheckBox
            android:id="@+id/cb_log_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:button="@drawable/check_gb"
            android:checked="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@id/cb_log_select"
            android:text="@string/log_remenber_password"
            android:textColor="#5b5b5b"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_log_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/log_forget_password"
            android:textSize="15sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_log_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:padding="10dp"
        android:textSize="15sp"
        android:background="@drawable/btn_click_bg" />

    <Button
        android:id="@+id/btn_log_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:padding="10dp"
        android:textSize="15sp"
        android:background="@drawable/btn_click_bg" />

</LinearLayout>
