<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/titlebar">

    </include>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:background="@drawable/agreement_bg">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:drawableLeft="@mipmap/reg_username"
                android:layout_marginLeft="15dp"
                android:drawablePadding="10dp"
                android:textSize="15sp"
                android:textColor="#3e3e3e"
                android:text="@string/reg_username" />

            <EditText
                android:id="@+id/et_reg_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_marginRight="15dp"
                android:background="#00000000"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:textColorHint="#c9c9c9"
                android:textColor="@color/item_content_color"
                android:singleLine="true"
                android:textSize="15sp"
                android:hint="@string/reg_hint_sun_eight" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#d2d2d2" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:drawableLeft="@mipmap/reg_password"
                android:layout_marginLeft="15dp"
                android:drawablePadding="10dp"
                android:textSize="15sp"
                android:textColor="#3e3e3e"
                android:text="@string/reg_password" />

            <EditText
                android:id="@+id/et_reg_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_marginRight="15dp"
                android:background="#00000000"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:inputType="textPassword"
                android:textColorHint="#c9c9c9"
                android:textColor="@color/item_content_color"
                android:singleLine="true"
                android:textSize="15sp"
                android:hint="@string/reg_hint_sun_sixty" />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#d2d2d2" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:drawableLeft="@mipmap/reg_password_sure"
                android:layout_marginLeft="15dp"
                android:drawablePadding="10dp"
                android:textSize="15sp"
                android:textColor="#3e3e3e"
                android:text="@string/reg_password_sure" />

            <EditText
                android:id="@+id/et_reg_password_sure"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_marginRight="15dp"
                android:background="#00000000"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:textColorHint="#c9c9c9"
                android:textColor="@color/item_content_color"
                android:singleLine="true"
                android:inputType="textPassword"
                android:textSize="15sp"
                android:hint="@string/reg_hint_sun_sixty_again" />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#d2d2d2" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:drawableLeft="@mipmap/reg_phone"
                android:layout_marginLeft="17dp"
                android:drawablePadding="12dp"
                android:textSize="15sp"
                android:textColor="#3e3e3e"
                android:text="@string/reg_referrer_phone" />

            <EditText
                android:id="@+id/et_reg_username_phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_marginRight="15dp"
                android:background="#00000000"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:textColorHint="#c9c9c9"
                android:textColor="@color/item_content_color"
                android:singleLine="true"
                android:inputType="phone"
                android:textSize="15sp"
                android:hint="@string/reg_or_not" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:padding="10dp"
        android:textSize="15sp"
        android:background="@drawable/btn_click_bg" />

</LinearLayout>
