<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/titlebar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/agreement_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:textSize="15sp"
            android:textColor="#3e3e3e"
            android:text="@string/reg_username" />

        <EditText
            android:id="@+id/et_modify_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_marginRight="15dp"
            android:background="#00000000"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:textColorHint="#c9c9c9"
            android:textColor="@color/item_content_color"
            android:singleLine="true"
            android:inputType="text"
            android:textSize="15sp"
            android:hint="@string/modify_username_hint" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_modify_name_sure"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/sure"
        android:textColor="@color/white"
        android:padding="10dp"
        android:textSize="15sp"
        android:background="@drawable/btn_click_bg" />
</LinearLayout>
