<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/titlebar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:background="@drawable/agreement_bg">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/reg_phone"
                android:layout_centerVertical="true"
                android:layout_marginLeft="17dp" />

            <EditText
                android:id="@+id/et_find_phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:background="#00000000"
                android:layout_centerVertical="true"
                android:layout_marginLeft="50dp"
                android:textColorHint="#c9c9c9"
                android:singleLine="true"
                android:textSize="15sp"
                android:inputType="phone"
                android:textColor="@color/item_content_color"
                android:hint="@string/find_phone" />

        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#d2d2d2" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_find_get_code"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_alignParentRight="true"
                android:textColor="#F36714"
                android:textSize="15sp"
                android:text="@string/reg_get_code" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/reg_message"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp" />

            <EditText
                android:id="@+id/et_reg_message"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="5dp"
                android:layout_toLeftOf="@id/tv_find_get_code"
                android:textColorHint="#c9c9c9"
                android:textColor="@color/item_content_color"
                android:singleLine="true"
                android:textSize="15sp"
                android:inputType="number"
                android:hint="@string/find_code" />

            <View
                android:layout_width="1dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/tv_find_get_code"
                android:background="#d2d2d2" />

        </RelativeLayout>

    </LinearLayout>


    <Button
        android:id="@+id/btn_sure"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/sure"
        android:textColor="@color/white"
        android:padding="10dp"
        android:textSize="15sp"
        android:background="@drawable/btn_click_bg" />

</LinearLayout>
